--- a/app/src/main/res/layout/activity_edicion_dia.xml
+++ b/app/src/main/res/layout/activity_edicion_dia.xml
@@ -45,10 +45,12 @@
 
         <TextView
             android:id="@+id/tvFecha"
-            android:layout_width="wrap_content"
+            android:layout_width="75dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="64dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/btnFecha"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="14/10/2018" />
