--- a/app/src/main/res/drawable/ic_nuevo_foreground.xml
+++ b/app/src/main/res/drawable/ic_nuevo_foreground.xml
@@ -3,13 +3,13 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108"
-    android:tint="#000000">
-  <group android:scaleX="2.8449"
-      android:scaleY="2.8449"
-      android:translateX="19.8612"
-      android:translateY="19.8612">
+    android:tint="#FFFFFF">
+  <group android:scaleX="1.6965"
+      android:scaleY="1.6965"
+      android:translateX="33.642"
+      android:translateY="33.642">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M3,18h12v-2L3,16v2zM3,6v2h18L21,6L3,6zM3,13h18v-2L3,11v2z"/>
+        android:pathData="M13.35,20l0.57,2H5c-1.11,0 -2,-0.9 -2,-2L3.01,6c0,-1.1 0.88,-2 1.99,-2h1V2h2v2h8V2h2v2h1c1.1,0 2,0.9 2,2v8.92l-2,-0.57V10H5v10H13.35zM21.71,21.29l-3.22,-3.22L21,17l-7,-2l2,7l1.08,-2.51l3.22,3.22L21.71,21.29zM12,17v-5H7v5H12z"/>
   </group>
 </vector>
