--- a/app/src/main/res/values/ic_nuevo_background.xml
+++ b/app/src/main/res/values/ic_nuevo_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_nuevo_background">#B00202</color>
+    <color name="ic_nuevo_background">#5F3DDC</color>
 </resources>
