realizando punto 18-19 P3 Preguntar en clase

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -27,5 +27,11 @@
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/stConfPrograma"/>
+    <SwitchPreference
+        android:defaultValue="false"
+        android:icon="@android:drawable/ic_popup_reminder"
+        android:key="avisar"
+        android:summary="@string/stAvisarEscribirDescripcion"
+        android:title="@string/stAvisarEscribir" />
 
 </PreferenceScreen>
