--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="hombre">#DAF4FF</color>
+    <color name="mujer">#FBEBFD</color>
+    <color name="otro">#FFFFFF</color>
 </resources>
