--- a/app/src/main/res/layout/item_dia.xml
+++ b/app/src/main/res/layout/item_dia.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:textColor="#FFFFFF"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/ivValoracionItem"
             card_view:layout_constraintEnd_toStartOf="@+id/ivBorrarItem"
@@ -53,6 +54,7 @@
             android:id="@+id/tvFechaItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
             android:textSize="12sp"
             card_view:layout_constraintBottom_toBottomOf="@+id/ivValoracionItem"
             card_view:layout_constraintStart_toStartOf="@+id/tvResumenItem"
